--- a/TMS/TMS/Views/Profile/ChangePassword.cshtml
+++ b/TMS/TMS/Views/Profile/ChangePassword.cshtml
@@ -1,7 +1,7 @@
 ﻿@model TMS.Models.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
-    string UserRole = ViewBag.UserRole;
+    string UserRole = ViewBag.Role;
     switch (UserRole)
     {
         case "technician": Layout = "~/Areas/Technician/Views/Shared/_TopLayout.cshtml"; break;
