--- a/TMS/TMS/Views/KnowledgeBase/Index.cshtml
+++ b/TMS/TMS/Views/KnowledgeBase/Index.cshtml
@@ -15,7 +15,6 @@
 <link rel="stylesheet" href="~/Content/Plugins/jstree/style.min.css" />
 
 <style>
-
     #custom-search-input {
         padding: 3px;
         border: solid 1px #E4E4E4;
@@ -256,17 +255,56 @@
     </div>
 </div>
 
+<div id="tickets-by-tags-modal" class="modal fade" aria-hidden="true" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <h4 class="modal-title">Tickets List</h4>
+            </div>
+            <div class="modal-body">
+                <div class="pull-right">
+                    <select id="frequently-asked-subjects-time-option-select">
+                        <option value="1">Today</option>
+                        <option value="2">4 Days ago</option>
+                        <option value="3" selected>This Week</option>
+                        <option value="4">This Month</option>
+                        <option value="5">This Year</option>
+                    </select>
+                </div>
+                <table class="table dataTable" id="tickets-by-tags-table">
+                    <thead>
+                        <tr>
+                            <th>Subject</th>
+                            <th>Tags</th>
+                            <th>Action</th>
+                        </tr>
+                    </thead>
+                    <tbody></tbody>
+                </table>
+            </div>
+            <div class="modal-footer" style="text-align: center;">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 @section scripts{
     <script src="~/Content/Plugins/jstree/jstree.min.js"></script>
     <script>
         var sum = 0;
         var selectedSolutions = [];
+        var initTags = "";
 
         $(document).ready(function () {
             notifyFlashMessage();
             showTreeViewModal();
             getSolutionsByActiveNode(null);
             initFrequentlyAskedSubjectsTable();
+            initTicketsByTagsTable();
             $(".menu-item").click(function () {
 
                 //if submenu is hidden, does not have active class
@@ -420,7 +458,7 @@
                 var id = $(element).attr("data-id");
                 if (selectedSolutions.indexOf(id) != -1) {
                     $(element).prop("checked", true);
-                } 
+                }
             });
         }
 
@@ -445,7 +483,7 @@
                             layout: "topCenter",
                             type: "success",
                             timeout: 2000,
-                        },selectedSolutions = [] );                     
+                        }, selectedSolutions = []);
                         getSolutionsByActiveNode();
                     }
                 },
@@ -533,8 +571,7 @@
                         "targets": 0,
                         "width": "60%",
                         "render": function (data, type, row) {
-                            var content = '<p>' + row.Subject + '</p>';
-                            return content + loadKeywordToTags(row.Tags);
+                            return loadKeywordToTags(row.Tags);
                         }
                     },
                     {
@@ -555,7 +592,8 @@
                         "sortable": false,
                         "width": "10%",
                         "render": function (data, type, row) {
-                            return '<a href="/KnowledgeBase/Create?Keyword=' + row.Tags + '" class="btn btn-flat btn-primary">Add Solution</a>';
+                            //return '<a href="/KnowledgeBase/Create?Keyword=' + row.Tags + '" class="btn btn-flat btn-primary">Add Solution</a>';
+                            return '<a href="javascript:void(0)" onclick="showTicketsModalByTags(\'' + row.Tags + '\')">View tickets</a>';
                         }
                     }
                 ]
@@ -588,6 +626,57 @@
             return content;
         }
 
+        var showTicketsModalByTags = function (tags) {
+            initTags = tags;
+            $("#tickets-by-tags-table").dataTable().api().ajax.reload();
+            $("#tickets-by-tags-modal").modal("show");
+        }
+
+        var initTicketsByTagsTable = function () {
+            $("#tickets-by-tags-table").dataTable({
+                processing: true,
+                serverSide: true,
+                paging: true,
+                sort: true,
+                filter: false,
+                lengthMenu: [5],
+                order: [[1, 'desc']],
+                lengthChange: false,
+                ajax: {
+                    url: "/KnowledgeBase/GetTicketsByTags",
+                    data: function (d) {
+                        d.tags = initTags,
+                        d.timeOption = $("#frequently-asked-subjects-time-option-select").val()
+                    }
+                },
+                autoWidth: false,
+                columnDefs: [
+                    {
+                        "targets": 0,
+                        "width": "60%",
+                        "render": function (data, type, row) {
+                            return row.Subject; 
+                        }
+                    },
+                    {
+                        "targets": 1,
+                        "width": "30%",
+                        "render": function (data, type, row) {
+                            //return loadKeywordToTags(row.Tags);
+                            return row.Tags;
+                        }
+                    },
+                    {
+                        "targets": 2,
+                        "sortable": false,
+                        "width": "10%",
+                        "render": function (data, type, row) {
+                            return '<a href="/KnowledgeBase/Create?Subject=' + row.Subject + '" class="btn btn-flat btn-primary">Add Solution</a>';
+                        }
+                    }
+                ]
+            });
+        }
 
     </script>
 }
