--- a/TMS/TMS/Views/KnowledgeBase/Index.cshtml
+++ b/TMS/TMS/Views/KnowledgeBase/Index.cshtml
@@ -593,7 +593,7 @@
                         "width": "10%",
                         "render": function (data, type, row) {
                             //return '<a href="/KnowledgeBase/Create?Keyword=' + row.Tags + '" class="btn btn-flat btn-primary">Add Solution</a>';
-                            return '<a href="javascript:void(0)" onclick="showTicketsModalByTags(\'' + row.Tags + '\')">View tickets</a>';
+                            return '<a href="javascript:void(0)" onclick="showTicketsModalByTags(\'' + row.Tags + '\')" class="btn btn-flat btn-primary">View tickets</a>';
                         }
                     }
                 ]
