--- a/TMS/TMS/Areas/Technician/Views/Profile/UpdateProfile.cshtml
+++ b/TMS/TMS/Areas/Technician/Views/Profile/UpdateProfile.cshtml
@@ -101,8 +101,7 @@
             <div class="row">
                 <div class="col-md-3 col-sm-4 profile-label"><span>Department</span></div>
                 <div class="col-md-9 col-sm-8">
-                    @Html.TextBoxFor(m => m.DepartmentName, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(m => m.DepartmentName, "", new { @class = "text-danger" })
+                    <input type="text" class="form-control" disabled="disabled" value="@Model.DepartmentName" />
                 </div>
             </div>
             <div class="row" style="border-bottom: none;">
