--- a/TMS/TMS/Views/KnowledgeBase/Edit.cshtml
+++ b/TMS/TMS/Views/KnowledgeBase/Edit.cshtml
@@ -62,17 +62,20 @@
                     <label class="control-label col-md-2">Attach file</label>
                     <div class="col-md-10">
                         <input class="form-control" type="file" id="SolutionAttachments" name="SolutionAttachments" multiple>
-                        <div style="height: auto; margin-top: 5px;">
-                            @for (int i = 0; i < Model.SolutionAttachmentsList.Count(); i++)
-                            {
-                                <div class="attachment-div" style="display: inline;">
-                                    @Html.HiddenFor(it => Model.SolutionAttachmentsList[i].id)
-                                    @Html.HiddenFor(it => Model.SolutionAttachmentsList[i].name)
-                                    <label class="attachments btn-xs btn-primary btn-flat" data-id="@Model.SolutionAttachmentsList[i].id">@Model.SolutionAttachmentsList[i].name</label>
-                                    <span class='attachment-delete'> x </span>
-                                </div>
-                            }
-                        </div>
+                        @if (Model.SolutionAttachmentsList != null)
+                        {
+                            <div style="height: auto; margin-top: 5px;">
+                                @for (int i = 0; i < Model.SolutionAttachmentsList.Count(); i++)
+                                {
+                                    <div class="attachment-div" style="display: inline;">
+                                        @Html.HiddenFor(it => Model.SolutionAttachmentsList[i].id)
+                                        @Html.HiddenFor(it => Model.SolutionAttachmentsList[i].name)
+                                        <label class="attachments btn-xs btn-primary btn-flat" data-id="@Model.SolutionAttachmentsList[i].id">@Model.SolutionAttachmentsList[i].name</label>
+                                        <span class='attachment-delete'> x </span>
+                                    </div>
+                                }
+                            </div>
+                        }
                     </div>
                 </div>
                 <div class="form-group">
