--- a/TMS/TMS/Views/Ticket/History.cshtml
+++ b/TMS/TMS/Views/Ticket/History.cshtml
@@ -170,6 +170,9 @@
                     case 'unapproved':
                         $(e).css("background-color", "#ed3012");
                         break;
+                    case 'reassigned':
+                        $(e).css("background-color", "#cc6600");
+                        break;
                     case 'cancelled':
                     default:
                         $(e).css("background-color", "#bac6ba");
