--- a/TMS/TMS/Views/Ticket/Detail.cshtml
+++ b/TMS/TMS/Views/Ticket/Detail.cshtml
@@ -1,4 +1,5 @@
-﻿@model TMS.ViewModels.BasicTicketViewModel
+﻿@using TMS.Utils
+@model TMS.ViewModels.BasicTicketViewModel
 @{
     Layout = "~/Views/Shared/_TopLayout.cshtml";
     ViewBag.Title = "TMS - Ticket #" + Model.Code;
@@ -64,7 +65,7 @@
 
 <div class="row">
     <div class="col-xs-12">
-        <a href="/Ticket/Index" style="font-size: 16px; padding: 15px 10px" ><i class="fa fa-arrow-left"></i>&nbsp;&nbsp; Back to Ticket list</a>
+        <a href="/Ticket/Index" style="font-size: 16px; padding: 15px 10px"><i class="fa fa-arrow-left"></i>&nbsp;&nbsp; Back to Ticket list</a>
         <div class="box box-solid" style="margin-top: 15px">
             <div class="box-header no-padding">
                 <div class="col-lg-1 col-sm-2 no-padding text-center">
@@ -111,19 +112,21 @@
         <div class="box box-solid">
             <div class="box-body no-pad-left">
                 <div class="col-lg-1 col-sm-2 text-bold">Description: </div>
-                <div class="col-lg-11 col-sm-10"><span class="pre-wrap" id="ticket-description">@Html.DisplayFor(model => model.Description)</span></div>
+                <div class="col-lg-11 col-sm-10">
+                    <span class="pre-wrap" id="ticket-description">@Html.DisplayFor(model => model.Description)</span>
+                </div>
             </div>
             <div class="box-footer no-pad-left bg-light-green">
                 <div class="col-lg-1 col-sm-2 text-bold">Attachment: </div>
                 <div class="col-sm-10">
-                @if (!string.IsNullOrWhiteSpace(Model.DescriptionAttachment))
-                {
-                    <span id="ticket-attachment">@Html.Raw(Model.DescriptionAttachment)</span>
-                }
-                else
-                {
-                    <span id="ticket-attachment">None</span>
-                }
+                    @if (!string.IsNullOrWhiteSpace(Model.DescriptionAttachment))
+                    {
+                        <span id="ticket-attachment">@Html.Raw(Model.DescriptionAttachment)</span>
+                    }
+                    else
+                    {
+                        <span id="ticket-attachment">None</span>
+                    }
                 </div>
             </div>
         </div>
@@ -165,14 +168,14 @@
                 <div class="box-body no-pad-left bg-light-green">
                     <div class="col-lg-1 col-sm-2 text-bold">Unapproved reason: </div>
                     <div class="col-lg-11 col-sm-10">
-                        <p class="pre-wrap" id="ticket-solution">@Html.DisplayFor(model => model.UnapproveReason)</p>
+                        <span class="pre-wrap" id="ticket-solution">@Html.DisplayFor(model => model.UnapproveReason)</span>
                     </div>
                 </div>
             </div>
         }
 
 
-        @if (Model.Status == 3)
+        @if (Model.Status == ConstantUtil.TicketStatus.Solved)
             {
             <div class="box box-solid">
                 <div class="box-body" id="approve-ticket">
